pug template engine implemented

--- a/customer/views/shop.html
+++ b/customer/views/shop.html
@@ -8,7 +8,7 @@
             <a href="/addproduct">Add product</a>
         </header>
         <content class="content">
-            <h1>Add product route</h1>
+            <h1>Shop page</h1>
         </content>
     </body>
 </html>
